--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,18 @@
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./js/mobile-menu.js"></script>
-    <script src="./index.js"></script>
     <script src="./js/products-botton.js"></script>
+    <script src="./index.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/3.3.0/masonry.pkgd.min.js"></script>
+    <script src="http://imagesloaded.desandro.com/imagesloaded.pkgd.min.js"></script>
+    <script type="text/javascript">
+      $('#container').masonry({
+        // options
+        itemSelector: '.item',
+        columnWidth: 200,
+      });
+    </script>
+        <script src="./js/gallery-grid.js"></script>
+
   </body>
 </html>
