--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="/images/favicon/favicon.ico" type="image/x-icon">
     <title>Icecream</title>
     <link
       rel="stylesheet"
@@ -34,8 +35,7 @@
     <script src="./js/products-botton.js"></script>
     <script src="./index.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/3.3.0/masonry.pkgd.min.js"></script>
-
-        <script src="./js/gallery-grid.js"></script>
+    <script src="./js/gallery-grid.js"></script>
 
   </body>
 </html>
