создает js файл

--- a/src/index.html
+++ b/src/index.html
@@ -56,14 +56,6 @@
       type="text/javascript"
       src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
     ></script>
-
-    <script>
-      $('.multiple-items').slick({
-        infinite: true,
-        slidesToShow: 1,
-        slidesToScroll: 1,
-        dots: true,
-      });
-    </script>
+    <script src="./js/slick.js"></script>
   </body>
 </html>
