--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,7 @@
   </head>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
+    <include src="./partials/modal.html"></include>
     <include src="./partials/header.html"></include>
     <include src="./partials/hiro.html"></include>
     <include src="./partials/products.html"></include>
@@ -42,6 +43,8 @@
     <include src="./partials/reviews.html"></include>
     <include src="./partials/contacts.html"></include>
     <include src="./partials/footer.html"></include>
+    
+
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./js/mobile-menu.js"></script>
@@ -57,5 +60,6 @@
       src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
     ></script>
     <script src="./js/slick.js"></script>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
