добавил скрипт открытия карты

--- a/src/index.html
+++ b/src/index.html
@@ -56,5 +56,6 @@
     <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="./js/slick.js"></script>
     <script src="./js/modal.js"></script>
+    <script src="./js/contacts-modal.js"></script>
   </body>
 </html>
